# stardeck

./: Cargo.toml  README.md  stardeck.iss
.claude/: settings.local.json
docs/: SYNC.md
packaging/: build-deb.sh  control.template  extract-ico.py  stardeck.desktop
src/: config.rs  db.rs  main.rs  theme.rs
