[package]
name = "stardeck"
version = "0.1.0"
edition = "2021"
description = "Offline-first terminal-themed note taker (Postgres sync to come)"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_commonmark = "0.18"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
